# achemy

./: CHANGELOG.md  ChangeLog  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yml
achemy/: __init__.py  activerecord.py  base.py  cli.py  codegen.py  config.py  engine.py  mixins.py  model.py  query.py  repository.py  schema.py  select.py
achemy/demo/: amodels.py
aiochemy/: config.py  mixins.py
migrations/versions/: 00001_init_schema.py
tests/: conftest.py  models.py  test_cli_codegen.py  test_config.py  test_engine.py  test_schema.py
tests/async/: conftest.py  test_activerecord.py  test_async_integration.py  test_async_select.py  test_mixins.py  test_model_methods.py  test_repository.py
