[project]
name = "achemy"
version = "0.2.2"
description = ""
authors = [{ name = "ant31", email = "2t.antoine@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "sqlalchemy (>=2)",
    "pydantic (>=2)",
    "asyncpg",
    "alembic (>=1.15.2,<2.0.0)",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "pyreadline",
    "requests",
    "pyright",
    "black",
    "ipython",
    "pylint",
    "pyre-check",
    "types-requests",
    "isort",
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-ordering",
    "ruff",
    "pylint-pydantic",
    "pytest-asyncio",
    "bump-my-version>=1.1.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope="function"
asyncio_default_fixture_loop_scope = "session"

[tool.bumpversion]
current_version = "0.2.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = 'achemy/__init__.py'
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
regex = true
